{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 21,
  "lineage": "357341c6-8102-a454-bc5b-b3a7dec2e69b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myterraformnic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user06rg-final/providers/Microsoft.Network/networkInterfaces/user06NIC",
            "ip_configuration": [
              {
                "name": "user06NicConfiguration",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user06rg-final/providers/Microsoft.Network/publicIPAddresses/user06PublicIP",
                "subnet_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user06rg-final/providers/Microsoft.Network/virtualNetworks/user06Vnet/subnets/user06Subnet"
              }
            ],
            "location": "koreasouth",
            "mac_address": "00-22-48-06-17-DC",
            "name": "user06NIC",
            "network_security_group_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user06rg-final/providers/Microsoft.Network/networkSecurityGroups/user06NetworkSecurityGroup",
            "private_ip_address": "6.0.1.4",
            "private_ip_addresses": [
              "6.0.1.4"
            ],
            "resource_group_name": "user06rg-final",
            "virtual_machine_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user06rg-final/providers/Microsoft.Compute/virtualMachines/user06VM"
          },
          "depends_on": [
            "azurerm_network_security_group.myterraformnsg",
            "azurerm_public_ip.myterraformpublicip",
            "azurerm_resource_group.myterraformgroup",
            "azurerm_subnet.myterraformsubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myterraformnic2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user06rg-final/providers/Microsoft.Network/networkInterfaces/user06NIC2",
            "ip_configuration": [
              {
                "name": "user06NicConfiguration2",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user06rg-final/providers/Microsoft.Network/publicIPAddresses/user06PublicIP2",
                "subnet_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user06rg-final/providers/Microsoft.Network/virtualNetworks/user06Vnet/subnets/user06Subnet"
              }
            ],
            "location": "koreasouth",
            "name": "user06NIC2",
            "network_security_group_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user06rg-final/providers/Microsoft.Network/networkSecurityGroups/user06NetworkSecurityGroup2",
            "private_ip_address": "6.0.1.5",
            "private_ip_addresses": [
              "6.0.1.5"
            ],
            "resource_group_name": "user06rg-final"
          },
          "depends_on": [
            "azurerm_network_security_group.myterraformnsg2",
            "azurerm_public_ip.myterraformpublicip2",
            "azurerm_resource_group.myterraformgroup",
            "azurerm_subnet.myterraformsubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myterraformnsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user06rg-final/providers/Microsoft.Network/networkSecurityGroups/user06NetworkSecurityGroup",
            "location": "koreasouth",
            "name": "user06NetworkSecurityGroup",
            "resource_group_name": "user06rg-final",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 2001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myterraformnsg2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user06rg-final/providers/Microsoft.Network/networkSecurityGroups/user06NetworkSecurityGroup2",
            "location": "koreasouth",
            "name": "user06NetworkSecurityGroup2",
            "resource_group_name": "user06rg-final",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 2001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user06rg-final/providers/Microsoft.Network/publicIPAddresses/user06PublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.231.162.212",
            "ip_version": "IPv4",
            "location": "koreasouth",
            "name": "user06PublicIP",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "user06rg-final",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicip2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user06rg-final/providers/Microsoft.Network/publicIPAddresses/user06PublicIP2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "koreasouth",
            "name": "user06PublicIP2",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "user06rg-final",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myterraformsubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "6.0.1.0/24",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user06rg-final/providers/Microsoft.Network/virtualNetworks/user06Vnet/subnets/user06Subnet",
            "ip_configurations": [
              "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user06rg-final/providers/Microsoft.Network/networkInterfaces/user06NIC/ipConfigurations/user06NicConfiguration",
              "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user06rg-final/providers/Microsoft.Network/networkInterfaces/user06NIC2/ipConfigurations/user06NicConfiguration2"
            ],
            "name": "user06Subnet",
            "resource_group_name": "user06rg-final",
            "virtual_network_name": "user06Vnet"
          },
          "depends_on": [
            "azurerm_resource_group.myterraformgroup",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myterraformnetwork",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "6.0.0.0/16"
            ],
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user06rg-final/providers/Microsoft.Network/virtualNetworks/user06Vnet",
            "location": "koreasouth",
            "name": "user06Vnet",
            "resource_group_name": "user06rg-final",
            "subnet": [
              {
                "address_prefix": "6.0.1.0/24",
                "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user06rg-final/providers/Microsoft.Network/virtualNetworks/user06Vnet/subnets/user06Subnet",
                "name": "user06Subnet"
              }
            ],
            "tags": {
              "environment": "user06 Vnet"
            }
          },
          "depends_on": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    }
  ]
}